fix: adjust margin-top for better alignment of the button

--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     width: 300px;
-    margin-top: 155px;
+    margin-top: 175px;
 }
 
 .pixel-frame {
